2006-06-23  John Luke  <john.luke@gmail.com>

	#if CAIRO_1_2 changes
	
	* Mono.Cairo/Surface.cs: add SetFallbackResolution
	* Mono.Cairo/CairoAPI.cs: remove old pdf/ps api and
	add some of the new API
	* Mono.Cairo/SurfaceType.cs:
	* Mono.Cairo/SvgSurface.cs:
	* Mono.Cairo/SvgVersion.cs: add these
	
2006-06-23  John Luke  <john.luke@gmail.com>

	* Mono.Cairo/Surface.cs:
	* Mono.Cairo/ImageSurface.cs:
	* Mono.Cairo/PDFSurface.cs:
	* Mono.Cairo/PSSurface.cs:
	* Mono.Cairo/Win32Surface.cs:
	* Mono.Cairo/XlibSurface.cs: split the surfaces into
	their own files, make pdf and ps reflect what will be
	in the cairo 1.2 api

2006-06-23  John Luke  <john.luke@gmail.com>

	* snippets/*.cs: use Cairo.Context instead of Cairo.Graphics
	* Samples/*/Makefile: add to ease building of samples
	
2006-05-02  Zac Bowling  <zac@zacbowling.com>
	
	* Mono.Cairo/Surface.cs: string should be byte[]
	* Mono.Cairo/Cairo.cs: string should be byte[]
	(Patch from Philipp Baer <phbaer@npw.net>)

2006-01-17  Alp Toker  <alp@atoker.com>

	* Samples/x11/compile.sh: Remove unused gtk-sharp reference

2005-12-19  Wade Berrier <wberrier@novell.com>

	* Mono.Cairo/Makefile: Fix EXTRA_DIST to include samples

2005-12-19  Peter Dennis Bartok  <pbartok@novell.com>

	* Mono.Cairo/Format.cs: Removed fixme, added names in .Net format
	* Mono.Cairo/Surface.cs: Removed fixme, added static method 
	  FromBitmap() to allow creating a surface from a bitmap
	* Mono.Cairo/Pattern.cs: Removed fixme to not tempt anyone to change
	  the name down the road

2005-12-16  John Luke  <john.luke@gmail.com>

	* Mono.Cairo/FontOptions.cs: fix bug with
	fontOptions == null, check parameter to Merge
	against null
	* Mono.Cairo/Glyph.cs: add setters to properties
	
2005-12-16  John Luke  <john.luke@gmail.com>

	* Mono.Cairo/Cairo.cs: organize and add missing API
	split out enums and structs
	* Mono.Cairo/*.cs: add enums and structs as seperate files
	implement ==, !=, Equals, and GetHashCode for the structs