@@ -14,9 +14,11 @@
 ./Mono.Cairo/FontWeight.cs
 ./Mono.Cairo/Format.cs
 ./Mono.Cairo/Glyph.cs
+./Mono.Cairo/Gradient.cs
 ./Mono.Cairo/HintMetrics.cs
 ./Mono.Cairo/HintStyle.cs
 ./Mono.Cairo/ImageSurface.cs
+./Mono.Cairo/LinearGradient.cs
 ./Mono.Cairo/LineCap.cs
 ./Mono.Cairo/LineJoin.cs
 ./Mono.Cairo/Matrix.cs
@@ -24,10 +26,13 @@
 ./Mono.Cairo/Pattern.cs
 ./Mono.Cairo/PdfSurface.cs
 ./Mono.Cairo/PSSurface.cs
+./Mono.Cairo/RadialGradient.cs
 ./Mono.Cairo/Rectangle.cs
+./Mono.Cairo/SolidPattern.cs
 ./Mono.Cairo/Status.cs
 ./Mono.Cairo/SubpixelOrder.cs
 ./Mono.Cairo/Surface.cs
+./Mono.Cairo/SurfacePattern.cs
 ./Mono.Cairo/SurfaceType.cs
 ./Mono.Cairo/SvgSurface.cs
 ./Mono.Cairo/SvgVersion.cs
