@@ -31,54 +31,12 @@ using System;
 
 namespace Cairo {
    
-        public class Pattern
-        {
-                protected IntPtr pattern = IntPtr.Zero;
-		
-                protected Pattern ()
-                {
-                }
-
-		internal Pattern (IntPtr ptr)
-		{			
-			pattern = ptr;
-		}		
-		
-                public Pattern (Surface surface)
-                {
-                        pattern = CairoAPI.cairo_pattern_create_for_surface (surface.Handle);
-                }
-		
-                protected void Reference ()
-                {
-                        CairoAPI.cairo_pattern_reference (pattern);
-                }
-
-                public void Destroy ()
-                {
-                        CairoAPI.cairo_pattern_destroy (pattern);
-                }
-		
-		public Status Status
+	public class RadialGradient : Gradient
+	{
+		public RadialGradient (double cx0, double cy0, double radius0, double cx1, double cy1, double radius1)
 		{
-			get { return CairoAPI.cairo_pattern_status (pattern); }
+			pattern = CairoAPI.cairo_pattern_create_radial (cx0, cy0, radius0, cx1, cy1, radius1);
 		}
-		
-                public Matrix Matrix {
-                        set { 
-				CairoAPI.cairo_pattern_set_matrix (pattern, value);
-			}
-
-                        get {
-				Matrix m = new Matrix ();
-				CairoAPI.cairo_pattern_get_matrix (pattern, m);
-				return m;
-                        }
-                }
-
-                public IntPtr Pointer {
-                        get { return pattern; }
-                }		
-        }
+	}
 }
 
